--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,5 @@ language: python
 build:
   - curl https://api.travis-ci.org/jobs/$TRAVIS_JOB_ID.json
 script:
-  - curl https://api.travis-ci.org/jobs/$TRAVIS_BUILD_ID.json
+  - curl https://api.travis-ci.org/builds/$TRAVIS_BUILD_ID.json
+  - curl https://api.travis-ci.org/builds/$TRAVIS_JOB_ID.json
