remove env and thus matrix

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,4 @@
 language: python
-env:
- - DURATION=100
 before_install:
  - sudo apt-get update -qq
  - sudo apt-get install -qq recordmydesktop x11-apps libpulse-dev pulseaudio dbus-x11
@@ -13,7 +11,7 @@ build:
 script:
   - "recordmydesktop --no-cursor  --output=session.ogv &"
   - "firefox www.youtube.com/watch?v=oHg5SJYRHA0 &"
-  - sleep $DURATION
+  - sleep 15
   - killall firefox
   - killall recordmydesktop
   - while pgrep -x recordmydesktop > /dev/null ; do sleep 1; done # wait for transcoding
