--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,9 @@ language: python
 env:
  matrix:
    - ONE=one
-   - TWO=two
 before_install:
  - sudo apt-get update -qq
- - sudo apt-get install -qq recordmydesktop x11-apps libpulse-dev pulseaudio dbus-x11
+ - sudo apt-get install -qq recordmydesktop x11-apps libpulse-dev pulseaudio dbus-x11 espeak mbrola-en1 pulseaudio-utils
 before_script:
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
@@ -14,9 +13,15 @@ build:
   - true
 script:
   - "recordmydesktop --no-cursor  --output=session.ogv &"
+  - paplay <(espeak -vmb-en1  "Ok, let's get rickrolled!" --stdout)
   - "firefox www.youtube.com/watch?v=oHg5SJYRHA0 &"
   - sleep 10
+  - paplay <(espeak -vmb-en1  "That bored me!" --stdout)
   - killall firefox
+  - sleep 2
+  - paplay <(espeak -vmb-en1  "Much better now" --stdout)
+  - sleep 2
+  - paplay <(espeak -vmb-en1  "I have to go. See you next build!" --stdout)
   - killall recordmydesktop
   - while pgrep -x recordmydesktop > /dev/null ; do sleep 1; done # wait for transcoding
   - tar cf artifacts.tar session.ogv
